[package]
name = "svbony-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Raw FFI bindings to the SVBony USB camera C SDK (v1.13.4)"
readme = "README.md"
repository = "https://github.com/ssmichael1/svbony"
keywords = ["svbony", "camera", "astronomy", "ffi", "usb"]
categories = ["external-ffi-bindings", "science", "hardware-support"]
links = "SVBCameraSDK"
rust-version = "1.68"

[build-dependencies]
