[package]
name = "svbony"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Safe Rust wrapper for the SVBony USB camera SDK"
readme = "README.md"
repository = "https://github.com/ssmichael1/svbony"
keywords = ["svbony", "camera", "astronomy", "astrophotography", "usb"]
categories = ["api-bindings", "science", "hardware-support"]
rust-version = "1.68"

[features]
image = ["dep:image"]

[dependencies]
svbony-sys = { path = "../svbony-sys", version = "0.1.0" }
thiserror = "2"
image = { version = "0.25", default-features = false, optional = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
